--- a/client/src/styles/signup.css
+++ b/client/src/styles/signup.css
@@ -133,7 +133,7 @@ body {
     .signup-page > .container > .right-content {
         padding: 0 20px 10px;
     }
-    .right-content > .bottom-textlink-container {
+    .right-content .bottom-textlink-container {
         display: flex;
     }
 }
