--- a/client/src/styles/components/googlebutton.css
+++ b/client/src/styles/components/googlebutton.css
@@ -1,18 +1,18 @@
 .google-but-container {
-    text-decoration: none;
+    /* text-decoration: none; */
     max-width: 350px;
     width: 100%;
-    height: 40px;
+    /* height: 40px;
     border: 1px solid rgb(255, 255, 255, 0.5);
     background-color: #2E2A29;
     border-radius: 5px;
-    cursor: pointer;
+    cursor: pointer; */
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
+/* 
 .google-but-container:hover {
     background-color: #383433;
 }
@@ -28,4 +28,4 @@
     color: rgb(255, 255, 255, 0.9);
     font-weight: 500;
     font-size: 13px;
-}
+} */
