--- a/client/src/styles/navbarpage.css
+++ b/client/src/styles/navbarpage.css
@@ -19,7 +19,7 @@
 }
 
 .navbar-page-container > .content > .navbar-container {
-    background-color: red;
+    background-color: #2E2A29;
     width: 200px;
     min-height: 100%;
 }
