--- a/client/src/styles/navbarpage.css
+++ b/client/src/styles/navbarpage.css
@@ -63,6 +63,7 @@
     background-color: #2E2A29;
     width: 200px;
     min-height: 100%;
+    z-index: 1;
 }
 
 .navbar-page-container > .content > .navbar-page-content-container {
@@ -75,7 +76,7 @@
         display: flex;
     }
     .navbar-page-container > .content > .navbar-page-content-container {
-        width: calc(100% - 200px);
+        width: 100%;
         min-height: calc(100vh - 60px);
     }
     .navbar-page-container > .content > .navbar-container.close {
