--- a/client/src/styles/rooms.css
+++ b/client/src/styles/rooms.css
@@ -113,6 +113,7 @@
     background: transparent;
     height: calc(100% - 70px);
     overflow: auto;
+    padding: 10px 20px;
 }
 
 .navbar-page-content-container.three .chat-container .msg-container {
