--- a/client/src/styles/components/infocontainer.css
+++ b/client/src/styles/components/infocontainer.css
@@ -6,6 +6,7 @@
     padding: 5px 8px;
     border-radius: 5px;
     border-bottom: 1px solid #E0F6CA;
+    margin-bottom: 15px;
 
     display: flex;
     justify-content: center;
