--- a/client/src/styles/components/participantitem.css
+++ b/client/src/styles/components/participantitem.css
@@ -16,3 +16,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+.participants-container .participant-item.single .name {
+    width: 100%;
+}
