--- a/client/src/styles/rooms.css
+++ b/client/src/styles/rooms.css
@@ -48,7 +48,7 @@
     opacity: 0.5;
 }
 
-.content .right-container .content-container {
+.content .right-container .content-container, .content .right-container .loading-content-container {
     width: 100%;
     min-height: 100vh;
     background-color: #2E2A29;
@@ -57,6 +57,43 @@
 
 .navbar-page-container > .content > .navbar-container {
     border-right: 1.5px solid #171514;
+}
+
+.navbar-page-content-container.three .empty-selected-container {
+    min-height: 100%;
+    width: 100%;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar-page-content-container.three .empty-selected-container .logo {
+    width: 200px;
+}
+
+.navbar-page-content-container.three .empty-selected-container .text {
+    font-size: 14px;
+    font-family: "Inter";
+    font-style: italic;
+    font-weight: 200;
+    color: rgb(255, 255, 255, 0.3);
+    margin-top: 10px;
+}
+
+.navbar-page-content-container.three .empty-selected-container .text span {
+    color: rgb(255, 255, 255, 0.3);
+    font-size: 32px;
+    font-weight: 100;
+}
+
+.navbar-page-content-container.three .empty-selected-container .loading-icon {
+    color: rgb(255, 255, 255, 0.5);
+    font-size: 32px;
+    font-weight: 100;
+    margin-top: 30px;
 }
 
 .navbar-page-content-container.three .top-area {
