--- a/client/src/styles/rooms.css
+++ b/client/src/styles/rooms.css
@@ -148,9 +148,9 @@
 
 .navbar-page-content-container.three .chat-container .msg-container {
     background: transparent;
-    height: calc(100% - 70px);
+    height: calc(100%);
     overflow: auto;
-    padding: 10px 20px;
+    padding: 10px 20px 70px;
 }
 
 .navbar-page-content-container.three .chat-container .msg-container {
@@ -163,6 +163,9 @@
 
 .navbar-page-content-container.three .chat-container .send-msg-here-container {
     height: 70px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 
     display: flex;
     justify-content: center;
