--- a/client/src/styles/components/unreadmsgcontainer.css
+++ b/client/src/styles/components/unreadmsgcontainer.css
@@ -1,6 +1,5 @@
 .unread-msg-container {
-    min-width: calc(100% + 40px);
-    transform: translateX(-20px);
+    width: 100%;
     margin: 16px 0;
 
     display: flex;
