--- a/client/src/styles/rooms.css
+++ b/client/src/styles/rooms.css
@@ -150,7 +150,7 @@
     background: transparent;
     height: calc(100%);
     overflow: auto;
-    padding: 10px 20px 70px;
+    padding: 10px 0 70px;
 }
 
 .navbar-page-content-container.three .chat-container .msg-container {
