--- a/client/src/styles/components/popup.css
+++ b/client/src/styles/components/popup.css
@@ -32,6 +32,7 @@
     color: rgb(255, 255, 255, 1);
     margin-bottom: 20px;
     font-weight: 600;
+    line-height: 18px;
 }
 
 .popup-container .popup-content .help-text {
