added wait cursor, and toggle is working with dosabled

--- a/client/src/styles/components/primarybutton.css
+++ b/client/src/styles/components/primarybutton.css
@@ -30,7 +30,7 @@
 
 .pri-but.loading {
     background-color: transparent;
-    cursor: default;
+    cursor: wait;
     position: relative;
     overflow: hidden;
 }
