--- a/client/src/styles/components/secondarybutton.css
+++ b/client/src/styles/components/secondarybutton.css
@@ -22,7 +22,7 @@ a.sec-but {
 .sec-but.disabled {
     border-color: rgb(255, 255, 255, 0.5);
     color: rgb(255, 255, 255, 0.5);
-    cursor: context-menu;;
+    cursor: wait;
 }
 
 .sec-but:not(.disabled):hover {
