--- a/client/src/styles/rooms.css
+++ b/client/src/styles/rooms.css
@@ -178,7 +178,6 @@
     width: 40px;
     height: 40px;
     border-radius: 8px;
-    font-size: 17px;
     background-color: #2E2A29;
     color: rgb(224, 246, 202, 1);
     border: 1px solid rgb(224, 246, 202, 1);
@@ -193,16 +192,46 @@
     align-items: center;
 }
 
-.navbar-page-content-container.three .chat-container .scroll-down-btn:hover {
+.navbar-page-content-container.three .chat-container .scroll-down-btn:hover, .navbar-page-content-container.three .chat-container .new-msg-btn:hover {
     background-color: rgb(52, 47, 46);
 }
 
 .navbar-page-content-container.three .chat-container .scroll-down-btn .icon {
     animation-name: arrow-move;
+    font-size: 17px;
     animation-duration: 1s;
     animation-fill-mode: forwards;
     animation-iteration-count: infinite;
     animation-direction: alternate;
+}
+
+.navbar-page-content-container.three .chat-container .new-msg-btn {
+    position: absolute;
+    width: 70px;
+    height: 35px;
+    border-radius: 12px;
+    font-size: 12px;
+    background-color: #2E2A29;
+    color: rgb(224, 246, 202, 1);
+    border: 1px solid rgb(224, 246, 202, 1);
+    left: calc(50% - 20px);
+    bottom: 70px;
+    text-align: center;
+    cursor: pointer;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar-page-content-container.three .chat-container .new-msg-btn .icon {
+    animation-name: arrow-move;
+    font-size: 15px;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    margin-left: 3px;
 }
 
 .navbar-page-content-container.three .chat-container .msg-container {
